--- a/djangoshop/shopapp/templates/product.html
+++ b/djangoshop/shopapp/templates/product.html
@@ -8,8 +8,19 @@
     <title>Document</title>
 </head>
 <body>
+
     {% block content %}
-    <h1>{{code}}</h1>
+    <div class="card w-75 ml-2 " style="width: 18rem;">
+        <img class="card-img-top w-25" src="{{ product.image.url }}" alt="{{ product.name }}">
+        <div class="card-body">
+          <h5 class="card-title">{{ product.name }}</h5>
+          <h6 class="card-title">Категории товара : {{ product.categories.all|join:',' }}</h5>
+          <p class="card-text" >{{ product.description }}</p>
+          <h5 class="card-title">Цена : {{ product.price }} рублей </h5>
+        </div>
+      </div>
+
     {% endblock %}
+
 </body>
 </html>
