few ways to make url button

--- a/djangoshop/shopapp/templates/home.html
+++ b/djangoshop/shopapp/templates/home.html
@@ -47,6 +47,7 @@
           <p class="card-text" >{{ product.description|truncatewords:100 }}</p>
           <h5 class="card-title">Цена : {{ product.price }} рублей </h5>
           <a href='{{ product.get_absolute_url }}' class="btn btn-primary">Подробнее</a>
+          <!-- <a href="{% url 'product' product.product_code %}" class="btn btn-primary">Поasdasdдробнее</a>-->
         </div>
       </div>
     {% endfor %}
