--- a/djangoshop/shopapp/templates/product.html
+++ b/djangoshop/shopapp/templates/product.html
@@ -1,11 +1,11 @@
-{% extends 'home.html' %} 
+{% extends 'base.html' %} 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title></title>
 </head>
 <body>
 
@@ -20,7 +20,6 @@
           <h5 class="card-title">Цена : {{ product.price }} рублей </h5>
         </div>
       </div>
-
     {% endblock %}
 
 </body>
