--- a/djangoshop/shopapp/templates/base.html
+++ b/djangoshop/shopapp/templates/base.html
@@ -29,7 +29,7 @@
         <!-- конец navbar -->
 
     <div class="alert alert-danger" role="alert">
-        <strong>Ой</strong> Мы пока еще не открылись!
+        <strong>Ой</strong> Мы еще не открылись!
       </div>
       
     {% block content %}
