--- a/djangoshop/shopapp/templates/home.html
+++ b/djangoshop/shopapp/templates/home.html
@@ -44,7 +44,7 @@
     </ul> -->
     {% for product in products %}
     <div class="card w-50 ml-2 mb-2">
-        <img class="card-img-top w-25" src="{{ product.image.url }}" alt="{{ product.name }}">
+        <img class="card-img-top w-25 ml-3 mt-3" src="{{ product.image.url }}" alt="{{ product.name }}">
         <div class="card-body">
           <h5 class="card-title">{{ product.name }}</h5>
           <h6 class="card-title">Категории товара : {{ product.categories.all|join:',' }}</h5>
