--- a/djangoshop/shopapp/templates/base.html
+++ b/djangoshop/shopapp/templates/base.html
@@ -23,6 +23,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'admin:index' %}">Админка</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'register' %}">Регистрация</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Вход</a>
+                  </li>
               </ul>
             </div>
           </nav>
