--- a/djangoshop/shopapp/templates/register.html
+++ b/djangoshop/shopapp/templates/register.html
@@ -3,12 +3,12 @@
 
 {% block content %} 
 <div class="container py-5">
-	<h1>Register</h1>
+	<h1>Регистрация</h1>
 	<form method="POST">
 		{% csrf_token %}
 		{{ register_form|crispy }}                    
-		<button class="btn btn-primary" type="submit">Register</button>
+		<button class="btn btn-primary" type="submit">Регистрация</button>
 	</form>
-	<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
+	<p class="text-center">Если у вас уже есть аккаунт, <a href="/login">войдите</a></p>
 </div>
 {% endblock content %}
