--- a/djangoshop/shopapp/templates/register.html
+++ b/djangoshop/shopapp/templates/register.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block content %} 
+{% block content %}
+{% if user.is_authenticated %}
+<h1>Вы уже зарегистрированы</h1>
+{% else %}
 <div class="container py-5">
 	<h1>Регистрация</h1>
 	<form method="POST">
@@ -11,4 +14,5 @@
 	</form>
 	<p class="text-center">Если у вас уже есть аккаунт, <a href="/login">войдите</a></p>
 </div>
+{% endif %}
 {% endblock content %}
