--- a/djangoshop/shopapp/templates/logout.html
+++ b/djangoshop/shopapp/templates/logout.html
@@ -12,5 +12,7 @@
 		<button class="btn btn-primary" type="submit">Выйти</button>
 	</form>
 </div>
+{% else %}
+<a href="login">Войти</a>
 {% endif %}
 {% endblock content %}
