--- a/djangoshop/shopapp/templates/register.html
+++ b/djangoshop/shopapp/templates/register.html
@@ -12,7 +12,7 @@
 		{{ register_form|crispy }}                    
 		<button class="btn btn-primary" type="submit">Регистрация</button>
 	</form>
-	<p class="text-center">Если у вас уже есть аккаунт, <a href="/login">войдите</a></p>
+	<p class="text-center">Если у вас уже есть аккаунт, <a href="login">войдите</a></p>
 </div>
 {% endif %}
 {% endblock content %}
