--- a/djangoshop/shopapp/templates/login.html
+++ b/djangoshop/shopapp/templates/login.html
@@ -4,10 +4,10 @@
 {% block content %}
 
 {% if user.is_authenticated %}
-<h1>Вы уже вошли</h1>
+<h1>Вы уже вошли как {{ user.username }}</h1>
 {% else %}
 
-<div class="container py-5">
+<div class="container">
 	<h1>Вход</h1>
 	<form method="POST">
 		{% csrf_token %}
