--- a/djangoshop/shopapp/templates/register.html
+++ b/djangoshop/shopapp/templates/register.html
@@ -3,9 +3,9 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-<h1>Вы уже зарегистрированы</h1>
+<h1>Вы уже зарегистрированы как{{ user.username }}</h1>
 {% else %}
-<div class="container py-5">
+<div class="container">
 	<h1>Регистрация</h1>
 	<form method="POST">
 		{% csrf_token %}
