--- a/djangoshop/shopapp/templates/register.html
+++ b/djangoshop/shopapp/templates/register.html
@@ -9,7 +9,7 @@
 	<h1>Регистрация</h1>
 	<form method="POST">
 		{% csrf_token %}
-		{{ register_form|crispy }}                    
+		{{ form|crispy }}                    
 		<button class="btn btn-primary" type="submit">Регистрация</button>
 	</form>
 	<p class="text-center">Если у вас уже есть аккаунт, <a href={% url 'login' %}>войдите</a></p>
