--- a/djangoshop/shopapp/templates/register.html
+++ b/djangoshop/shopapp/templates/register.html
@@ -3,7 +3,8 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-<h1>Вы уже зарегистрированы как{{ user.username }}</h1>
+<h1>Вы уже зарегистрированы как {{ user.username }}</h1>
+<p class="text-center"><a href={% url 'logout' %}>Выйти</a></p>
 {% else %}
 <div class="container">
 	<h1>Регистрация</h1>
