--- a/djangoshop/shopapp/templates/base.html
+++ b/djangoshop/shopapp/templates/base.html
@@ -38,7 +38,7 @@
                 <a class="nav-link text-dark" href="{% url 'logout' %}">Выйти</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link btn btn-primary" href="{% url 'basket' %}">Корзина</a>
+                <a class="nav-link btn btn-primary" href="{% url 'cart' %}">Корзина</a>
               </li>
               {% endif %}
               </ul>
