--- a/djangoshop/shopapp/templates/base.html
+++ b/djangoshop/shopapp/templates/base.html
@@ -15,7 +15,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Первая</a>
+                  <a class="nav-link" href="{% url 'feedback' %}">Связь с нами</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Вторая</a>
