--- a/djangoshop/shopapp/templates/feedback.html
+++ b/djangoshop/shopapp/templates/feedback.html
@@ -3,10 +3,12 @@
 
 
 {% block content %}
+<div class="container">
 <form method="POST">
     {% csrf_token %}
     {{ form|crispy }}                    
-    <button class="btn btn-primary" type="submit">Вход</button>
+    <button class="btn btn-primary" type="submit">Отправить</button>
 </form>
+</div>
 {% endblock content %}
     
