--- a/djangoshop/shopapp/templates/base.html
+++ b/djangoshop/shopapp/templates/base.html
@@ -35,6 +35,9 @@
               </li>
               {% else %}
               <li class="nav-item">
+                <a class="nav-link text-dark">{{ user.username }}</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link text-dark" href="{% url 'logout' %}">Выйти</a>
               </li>
               <li class="nav-item">
