--- a/djangoshop/shopapp/templates/cart.html
+++ b/djangoshop/shopapp/templates/cart.html
@@ -3,6 +3,10 @@
 
 {% block content %}
     
+    {% for product in products %}
+        <p>{{ product.name }}</p>
+    {% endfor %}
+        
 
 {% endblock content %}
     
