order view functional started

--- a/djangoshop/shopapp/templates/cart.html
+++ b/djangoshop/shopapp/templates/cart.html
@@ -21,5 +21,6 @@
   </ul>
     
 <h1 class="display-4">Итого: {{ total_price }} рублей</h1>
+<a class="btn btn-primary btn-lg ml-1" href="{% url 'order' %}">Перейти к заказу</a>
 {% endblock content %}
     
