finished order view

--- a/djangoshop/shopapp/templates/cart.html
+++ b/djangoshop/shopapp/templates/cart.html
@@ -19,8 +19,9 @@
     {% endfor %}
     
   </ul>
-    
+  {% if total_price %}
 <h1 class="display-4">Итого: {{ total_price }} рублей</h1>
 <a class="btn btn-primary btn-lg ml-1" href="{% url 'order' %}">Перейти к заказу</a>
+  {% endif %}
 {% endblock content %}
     
