--- a/djangoshop/shopapp/templates/base.html
+++ b/djangoshop/shopapp/templates/base.html
@@ -32,7 +32,7 @@
               </li>
               {% else %}
               <li class="nav-item">
-                <a class="nav-link text-dark">{{ user.username }}</a>
+                <a href="{% url 'profile' %}" class="nav-link text-dark">{{ user.username }}</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-dark" href="{% url 'logout' %}">Выйти</a>
