--- a/djangoshop/shopapp/templates/order.html
+++ b/djangoshop/shopapp/templates/order.html
@@ -2,8 +2,11 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container">
+<div class="container ml-0">
     <form method="POST">
+        {% if price %}
+        <h2>Итого: {{  price }} рублей</h2>
+        {% endif %}
         {% csrf_token %}             
         <button class="btn btn-primary" type="submit">Оформить</button>
     </form>
