--- a/djangoshop/shopapp/templates/cart.html
+++ b/djangoshop/shopapp/templates/cart.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <ul class="list-group">
-    {% for product in cart.products.all %}
+    {% for product in products %}
     <li class="list-group-item">
       <p class="mb-0">{{product.name}} </p>
     <img src="{{ product.image.url }}" width="70" height="66">
