--- a/djangoshop/shopapp/templates/profile.html
+++ b/djangoshop/shopapp/templates/profile.html
@@ -2,13 +2,13 @@
 
 
 {% block content %}
-    {% for i in profile.orders.all %}
+    {% for order in orders %}
     <div class="card w-50 ml-2 mb-2">
         <div class="card-body">
-            <h4>Номер заказа: {{ i.order_id }}</h4>
-            <h4>Дата заказа: {{ i.date }}</h4>
-          <h6 class="card-title">Товары: {{ i.products.all|join:',' }}</h5>
-          <h5 class="card-title">Цена : {{ i.price_summary|floatformat }} рублей </h5> 
+            <h4>Номер заказа: {{ order.order_id }}</h4>
+            <h4>Дата заказа: {{ order.date }}</h4>
+          <h6 class="card-title">Товары: {{ order.products.all|join:',' }}</h5>
+          <h5 class="card-title">Цена : {{ order.price_summary|floatformat }} рублей </h5> 
         </div>
       </div>
     {% endfor %}
