--- a/djangoshop/shopapp/templates/home.html
+++ b/djangoshop/shopapp/templates/home.html
@@ -2,7 +2,9 @@
     {% block content %}
     {% for product in products %}
     <div class="card w-50 ml-2 mb-2">
+      {% if product.image %}
         <img class="card-img-top w-25 ml-3 mt-3" src="{{ product.image.url }}" alt="{{ product.name }}">
+      {% endif %}
         <div class="card-body">
           <h5 class="card-title">{{ product.name }}</h5>
           <h6 class="card-title">Категории товара : {{ product.categories.all|join:',' }}</h5>
